# smartHomeRaspberryPi

./: .gitignore  CMakeLists.txt  README.md
include/: connection.h
src/: CMakeLists.txt  connection.cpp  main.cpp
test/: CMakeLists.txt  connectionTest.cpp  mainTest.cpp
